home.yml: updated title in navbar_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,7 +1,7 @@
 navbar_entries:
   - title: about
     url: about
-  - title: website
+  - title: discord
     url: 'http://www.abhinav.co'
 project_entries:
   - title: Project 1
