--- a/_data/home.yml
+++ b/_data/home.yml
@@ -1,6 +1,6 @@
 navbar_entries:
   - title: about
-    url: about
+    url: ''
   - title: discord
     url: 'http://www.abhinav.co'
 project_entries:
