--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,7 +2,7 @@ navbar_entries:
   - title: about
     url: ''
   - title: discord
-    url: 'http://www.abhinav.co'
+    url: dsc.gg/anorakdev
 project_entries:
   - title: Project 1
     url: overview-post
