--- a/_data/home.yml
+++ b/_data/home.yml
@@ -4,7 +4,7 @@ navbar_entries:
   - title: discord
     url: 'https://dsc.gg/anorakdev'
 project_entries:
-  - title: Project 1
+  - title: AnoGiveaways
     url: overview-post
     desc: 'This is an example project, configured in _data/home.yml'
   - title: Project 2
