home.yml: updated highlight in project_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -10,6 +10,7 @@ project_entries:
   - title: Project 2
     url: overview-post
     desc: Projects are shown in card layout
+    highlight: e
   - title: Project 3
     url: overview-post
     desc: You can control visibility from _config.yml file
