--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,7 +6,9 @@ navbar_entries:
 project_entries:
   - title: AnoGiveaways
     url: overview-post
-    desc: 'This is an example project, configured in _data/home.yml'
+    desc: >-
+      A giveaway bot with an easy-to-use giveaway startup process and the option
+      of role-restricted giveaways.
   - title: Project 2
     url: overview-post
     desc: Projects are shown in card layout
