home.yml: updated desc in project_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -6,7 +6,9 @@ navbar_entries:
 project_entries:
   - title: Advantage
     url: overview-post
-    desc: ' A custom economy/leveling bot with items, with user work, booster perks, inventories, balances, and more.'
+    desc: >-
+      A custom economy/leveling bot with 40+ commands, including items, custom
+      colors, booster perks, inventories, balances, jobs, sectors, and more.
   - title: Project 2
     url: overview-post
     desc: Projects are shown in card layout
