home.yml: updated desc in project_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -8,7 +8,7 @@ project_entries:
     url: overview-post
     desc: >-
       A custom economy/leveling bot with 40+ commands, including items, custom
-      colors, booster perks, inventories, balances, unique jobs, and more.
+      colors, booster perks, inventories, balances, unique , and more.
   - title: Project 2
     url: overview-post
     desc: Projects are shown in card layout
