--- a/_data/home.yml
+++ b/_data/home.yml
@@ -12,7 +12,7 @@ project_entries:
   - title: Project 2
     url: overview-post
     desc: >-
-      An Christmas event game bot I made for my server with dynamic cooldowns,
+      A Christmas event game bot I made for my server with dynamic cooldowns,
       20+ weapons, and a lot of competition. 
     highlight: e
   - title: Project 3
