home.yml: updated title in project_entries

--- a/_data/home.yml
+++ b/_data/home.yml
@@ -9,7 +9,7 @@ project_entries:
     desc: >-
       A custom economy/leveling bot with 40+ commands, including items,
       inventories, balances, unique sectors, and more.
-  - title: Project 2
+  - title: Solstice
     url: overview-post
     desc: >-
       A Christmas event game bot I made for my server with dynamic cooldowns,
