--- a/_data/home.yml
+++ b/_data/home.yml
@@ -20,7 +20,7 @@ project_entries:
     desc: You can control visibility from _config.yml file
   - title: Project 4
     url: overview-post
-    desc: 'This project uses highlight markup, configured in _data/home.yml'
+    desc: 'A trivia bot with over 4,000 questions, 25 categories, and 4 gamemodes.'
     highlight: WIP
   - title: Project 5
     url: overview-post
