--- a/_data/home.yml
+++ b/_data/home.yml
@@ -21,7 +21,7 @@ project_entries:
   - title: TGO Trivia
     url: overview-post
     desc: 'A trivia bot with over 4,000 questions, 25 categories, and 4 gamemodes.'
-    highlight: WIP
+    highlight: ''
   - title: Project 5
     url: overview-post
     desc: Moonwalk also has horizontal list (used in header and footer)
