--- a/_data/home.yml
+++ b/_data/home.yml
@@ -15,7 +15,7 @@ project_entries:
       A Christmas event game bot I made for my server with dynamic cooldowns,
       20+ weapons, and a lot of competition. 
     highlight: What is TGO?
-  - title: Project 3
+  - title: TGO Trivia
     url: overview-post
     desc: You can control visibility from _config.yml file
   - title: TGO Trivia
