--- a/_data/home.yml
+++ b/_data/home.yml
@@ -31,6 +31,10 @@ project_entries:
     desc: >-
       An in-the-works music bot that currently plays YouTube links and holds a
       (very basic) queue.
+  - title: lorem-ipsum
+    url: lorem-ipsum
+    desc: lorem-ipsum
+    highlight: lorem-ipsum
 old_project_entries:
   - title: microrequests
     url: 'http://www.abhinav.co/microrequests'
