--- a/_data/home.yml
+++ b/_data/home.yml
@@ -25,7 +25,7 @@ project_entries:
   - title: AnoBot
     url: ''
     desc: 'A simple moderation, welcoming, ticketing, modmail, and suggestions bot.'
-    highlight: WIP
+    highlight: ''
   - title: Crescendo
     url: overview-post
     desc: >-
