--- a/_data/home.yml
+++ b/_data/home.yml
@@ -32,9 +32,7 @@ project_entries:
       An in-the-works music bot that currently plays YouTube links and holds a
       (very basic) queue.
 old_project_entries: []
-footer_entries:
-  - title: feed
-    url: feed.xml
+footer_entries: []
 misc_entries:
   - title: this is an example vertical list
     url: false
