--- a/_data/home.yml
+++ b/_data/home.yml
@@ -31,7 +31,7 @@ project_entries:
   - title: AnoBot
     url: ''
     desc: 'A simple moderation, welcoming, ticketing, modmail, and suggestions bot.'
-  - title: Crescendo
+  - title: Dropship
     url: ''
     highlight: 'Shut Down :('
     desc: 'A bot that sends an Among Us code to every server with custom channels, wiki search, and custom pings.'
