--- a/_data/home.yml
+++ b/_data/home.yml
@@ -2,7 +2,7 @@ navbar_entries:
   - title: about
     url: 'about'
   - title: my discord
-    url: 'https://dsc.gg/anorakdev'
+    url: 'https://discord.gg/ueyR9Shrbv'
 project_entries:
   - title: Advantage
     url: overview-post
