--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: AnorakDev
 author: AnorakX
-url: ''
+url: 'https://anorakx.github.io'
 description: >
   I'm a student and developer who has been coding in Python since 2018 and started using Discord.py when the pandemic began.
 permalink: '/:slug.html'
