--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ theme_config:
   show_navbar: true
   show_footer: true
   show_projects: true
-  show_old_projects: true
+  show_old_projects: false
   show_misc_list: false
   show_soopr: true
   soopr_base_url: 'https://soopr.netlify.app'
