--- a/_data/home.yml
+++ b/_data/home.yml
@@ -29,6 +29,9 @@ discord_project_entries:
   - title: TGO Trivia
     url: tgotrivia
     desc: 'A trivia bot with over 4,000 questions, 25 categories, and 4 gamemodes.'
+   - title: Hermes Modmail
+    url: hermesmodmail
+    desc: 'A modmail bot with customizable report channels, logs, and management roles/pings.'
   - title: X Giveaways
     url: xgiveaways
     desc: ' A giveaway bot with an easy-to-use giveaway startup process and the option of role-restricted giveaways.'
